force-app/main/default/objects/OrderItem/fields/A_Side_Service_ID__c.field-meta.xml
<CustomField>
    <fullName>A_Side_Service_ID__c</fullName>
    <label>A-Side Service ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>