force-app/main/default/objects/OrderItem/fields/API_Rate__c.field-meta.xml
<CustomField>
    <fullName>API_Rate__c</fullName>
    <label>API Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>