force-app/main/default/objects/OrderItem/fields/Asset_Creation_Mode__c.field-meta.xml
<CustomField>
    <fullName>Asset_Creation_Mode__c</fullName>
    <label>Asset Creation Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
                <default>true</default>
                <label>Auto</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>