force-app/main/default/objects/OrderItem/fields/Assigned_Inventory_Location__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Inventory_Location__c</fullName>
    <label>Assigned Location Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>