force-app/main/default/objects/OrderItem/fields/BAN_ID__c.field-meta.xml
<CustomField>
    <fullName>BAN_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account (BAN)</label>
    <referenceTo>BillingAccount__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>