force-app/main/default/objects/OrderItem/fields/BAR_Revenue_Bucket__c.field-meta.xml
<CustomField>
    <fullName>BAR_Revenue_Bucket__c</fullName>
    <description>Maps Product Family into the BAR report revenue buckets: Colo, IC, MS. Covers all 15 active Product2.Family picklist values in this org; the trailing 9. Other catches any family added later, so a non-zero 9. Other means an unmapped family.</description>
    <formula>CASE( TEXT(Product2.Family),
  &quot;Space&quot;, &quot;1. Colo&quot;,
  &quot;Power&quot;, &quot;1. Colo&quot;,
  &quot;Interconnect&quot;, &quot;2. IC&quot;,
  &quot;Cross Connect&quot;, &quot;2. IC&quot;,
  &quot;Network Services&quot;, &quot;2. IC&quot;,
  &quot;IP &amp; Internet&quot;, &quot;2. IC&quot;,
  &quot;Managed Connectivity&quot;, &quot;2. IC&quot;,
  &quot;Managed Services&quot;, &quot;3. MS&quot;,
  &quot;Remote Hands&quot;, &quot;3. MS&quot;,
  &quot;Office Services&quot;, &quot;3. MS&quot;,
  &quot;Professional Services&quot;, &quot;3. MS&quot;,
  &quot;Storage&quot;, &quot;3. MS&quot;,
  &quot;Reports&quot;, &quot;3. MS&quot;,
  &quot;Other&quot;, &quot;9. Other&quot;,
  &quot;None&quot;, &quot;9. Other&quot;,
  &quot;9. Other&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAR Revenue Bucket</label>
    <type>Text</type>
</CustomField>