force-app/main/default/objects/OrderItem/fields/Billing_Mode__c.field-meta.xml
<CustomField>
    <fullName>Billing_Mode__c</fullName>
    <label>Billing Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arrear</fullName>
                <default>true</default>
                <label>Arrear</label>
            </value>
            <value>
                <fullName>Advance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>