force-app/main/default/objects/OrderItem/fields/Breaker_ID__c.field-meta.xml
<CustomField>
    <fullName>Breaker_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Breaker ID</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Order Lines (Breaker)</relationshipLabel>
    <relationshipName>Order_Lines_Breaker</relationshipName>
    <type>Lookup</type>
</CustomField>