force-app/main/default/objects/OrderItem/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MRC</fullName>
                <default>true</default>
                <label>MRC</label>
            </value>
            <value>
                <fullName>NRC</fullName>
            </value>
            <value>
                <fullName>Usage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>