force-app/main/default/objects/OrderItem/fields/Custom_Attribute_Value__c.field-meta.xml
<CustomField>
    <fullName>Custom_Attribute_Value__c</fullName>
    <label>Custom Attribute Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>