force-app/main/default/objects/OrderItem/fields/Free_Months_Override__c.field-meta.xml
<CustomField>
    <fullName>Free_Months_Override__c</fullName>
    <label>Free Months (Line Override)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>