force-app/main/default/objects/OrderItem/fields/Is_Auto_NRC__c.field-meta.xml
<CustomField>
    <fullName>Is_Auto_NRC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System-Generated NRC</label>
    <type>Checkbox</type>
</CustomField>