force-app/main/default/objects/OrderItem/fields/Line_Category__c.field-meta.xml
<CustomField>
    <fullName>Line_Category__c</fullName>
    <label>Line Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>