force-app/main/default/objects/OrderItem/fields/Line_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Line_Remarks__c</fullName>
    <description>Free-text remarks per order line. Carried from QuoteLineItem.Line_Remarks__c via the SOF Handler flow. Displayed in invoice Remarks column.</description>
    <label>Line Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>