force-app/main/default/objects/OrderItem/fields/LOA_CFA_Status__c.field-meta.xml
<CustomField>
    <fullName>LOA_CFA_Status__c</fullName>
    <label>LOA/CFA Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>LOA Requested</fullName>
            </value>
            <value>
                <fullName>LOA Received</fullName>
            </value>
            <value>
                <fullName>CFA Issued</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>