force-app/main/default/objects/OrderItem/fields/MRC_Amount__c.field-meta.xml
<CustomField>
    <fullName>MRC_Amount__c</fullName>
    <formula>UnitPrice * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total MRC (Line)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>