force-app/main/default/objects/OrderItem/fields/ns_change_type__c.field-meta.xml
<CustomField>
    <fullName>ns_change_type__c</fullName>
    <label>Odoo Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NEW</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
            <value>
                <fullName>CHANGE</fullName>
            </value>
            <value>
                <fullName>CHANGE_PRICE</fullName>
                <label>CHANGE PRICE</label>
            </value>
            <value>
                <fullName>NO_CHANGE</fullName>
                <label>No Change</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>