force-app/main/default/objects/OrderItem/fields/Odoo_Attribute_Value_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Attribute_Value_ID__c</fullName>
    <label>Odoo Attribute Value ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>