force-app/main/default/objects/OrderItem/fields/Odoo_Origin_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Origin_Line_ID__c</fullName>
    <inlineHelpText>Odoo ns_origin_sale_line_id. Set by IP-2 (OdooOrderConfirmHandler). Echoed back in IP-4 change order payloads as ns_origin_sale_line_id.</inlineHelpText>
    <label>Odoo Origin Sale Line ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>