force-app/main/default/objects/OrderItem/fields/Odoo_Project_Task_IDs__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Project_Task_IDs__c</fullName>
    <description>Odoo project.task IDs linked to this order line (ns_project_task_id). Populated by IP-2 new_service callback. Required by IP-4 change orders for delete/change/price_change line types. Stored as comma-separated integer string e.g. &quot;33783,33784&quot;.</description>
    <label>Odoo Project Task IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>