force-app/main/default/objects/OrderItem/fields/Odoo_Sale_Order_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Sale_Order_Line_ID__c</fullName>
    <description>Odoo sale.order.line ID. The unique identifier for this order line in Odoo. Extracted from the Odoo export ID (e.g., __export__.sale_order_line_83298 -&gt; 83298). Referenced by other lines via Origin Sale Order Line/ID for change orders.</description>
    <externalId>true</externalId>
    <label>Odoo Sale Order Line ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>