force-app/main/default/objects/OrderItem/fields/Odoo_Sub_Task_IDs__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Sub_Task_IDs__c</fullName>
    <description>Odoo IB sub-task IDs for this order line (ns_sub_task_id - Installed Base service task). Populated by IP-2 new_service callback. Required by IP-4 change orders for delete/change/price_change line types. Typically same value as Odoo_Project_Task_IDs__c. Stored as comma-separated integer string.</description>
    <label>Odoo Sub Task IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>