force-app/main/default/objects/OrderItem/fields/Original_OrderItem__c.field-meta.xml
<CustomField>
    <fullName>Original_OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Change Orders: references the original OrderItem this line amends. Used by IP-4 to resolve Odoo_Subscription_ID__c from the Asset linked to the original line.</description>
    <label>Original Order Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Change Order Items</relationshipLabel>
    <relationshipName>Change_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>