force-app/main/default/objects/OrderItem/fields/Paired_MRC_OrderItem__c.field-meta.xml
<CustomField>
    <fullName>Paired_MRC_OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paired MRC OrderItem</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipName>NRC_OrderItems</relationshipName>
    <type>Lookup</type>
</CustomField>