force-app/main/default/objects/OrderItem/fields/Power_kVA__c.field-meta.xml
<CustomField>
    <fullName>Power_kVA__c</fullName>
    <label>Power Draw (kVA)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>