force-app/main/default/objects/OrderItem/fields/Product_Attribute_Value__c.field-meta.xml
<CustomField>
    <fullName>Product_Attribute_Value__c</fullName>
    <label>Attribute Value Selected</label>
    <length>100</length>
    <type>Text</type>
</CustomField>