force-app/main/default/objects/OrderItem/fields/Ramp_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Identifier__c</fullName>
    <description>Identifies whether this order line is a new addition (Add) or a change to a linked prior phase (Change). Carried from QuoteLineItem.</description>
    <label>Ramp Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Price_Change</fullName>
                <label>Price Change</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>