force-app/main/default/objects/OrderItem/fields/Ramp_Invoice_Display__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Invoice_Display__c</fullName>
    <label>Ramp Invoice Display</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current Phase Only</fullName>
                <default>true</default>
                <label>Current Phase Only</label>
            </value>
            <value>
                <fullName>Show All Phases</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>