force-app/main/default/objects/OrderItem/fields/Ramp_Linked_Phase__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Linked_Phase__c</fullName>
    <description>The ramp phase number this order line links to. Carried from QuoteLineItem.</description>
    <label>Ramp Linked Phase</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>