force-app/main/default/objects/OrderItem/fields/Ramp_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Start_Date__c</fullName>
    <label>Ramp Phase Start Date</label>
    <type>Date</type>
</CustomField>