force-app/main/default/objects/OrderItem/fields/Space_ID__c.field-meta.xml
<CustomField>
    <fullName>Space_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Space ID</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Order Lines (Space)</relationshipLabel>
    <relationshipName>Order_Lines_Space</relationshipName>
    <type>Lookup</type>
</CustomField>