force-app/main/default/objects/OrderItem/fields/Target_BAN__c.field-meta.xml
<CustomField>
    <fullName>Target_BAN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target BAN</label>
    <referenceTo>BillingAccount__c</referenceTo>
    <relationshipLabel>Order Items (Target BAN)</relationshipLabel>
    <relationshipName>Order_Items_Target_BAN</relationshipName>
    <type>Lookup</type>
</CustomField>